--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="wrapper">
       <ul>
         <li class="card-image1"></li>
-        <li></li>
-        <li></li>
+        <li class="card-image2"></li>
+        <li class=card-image3></li>
 
       </ul>
     </div>
