--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
     </ul>
 
 
-      <div class=nbList2>
-        <li>ABOUT US</li>
-        <li>HOW TO HELP</li>
+    <div class=nbList2>
+      <li>ABOUT US</li>
+      <li>HOW TO HELP</li>
 
-        <li>
-          <input type="text" placeholder="Search">
-        </li>
-        <li>
-          <button>DONATE</button>
-          <button style="background-color:#e98300;">ADOPT</button>
-        </li>
-      </div>
+      <li>
+        <input type="text" placeholder="Search">
+      </li>
+      <li>
+        <button>DONATE</button>
+        <button style="background-color:#e98300;">ADOPT</button>
+      </li>
+    </div>
   </div>
 
   <header class="headerImg">
@@ -49,17 +49,18 @@
   </header>
 
   <div class="homepage">
+
     <div class="wrapper">
-      <ul>
+      <ul class="cards">
         <li class="card-image1"></li>
         <li class="card-image2"></li>
         <li class=card-image3></li>
-
       </ul>
     </div>
-    <div class="wrapper">
 
+    <div class="wrapper">
     </div>
+    
   </div>
 
 
@@ -71,5 +72,4 @@
 
 
 </body>
-
 </html>
