--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
     <div class="wrapper">
       <ul class="cards">
         <li class="card-image1"></li>
-        <li class="card-image2"></li>
+        <li class="card-image2">
+          <a class="card-content2">
+            Helo how you are
+          </a>
+        </li>
         <li class=card-image3></li>
       </ul>
     </div>
