--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
 
-
   <div class="logo">
   </div>
 
@@ -54,12 +53,12 @@
       <ul class="cards">
         <li class="card-image1"></li>
         <li class="card-image2">
-          <a class="card-content2">
-            Helo how you are
-          </a>
         </li>
         <li class=card-image3></li>
       </ul>
+      <div class="card-content2">
+        Helo how you are
+      </div>
     </div>
 
     <div class="wrapper">
