added centered features title

--- a/index.html
+++ b/index.html
@@ -51,18 +51,24 @@
 
     <div class="wrapper">
       <ul class="cards">
-        <li class="card-image1"></li>
+        <li class="card-image1" ></li>
         <li class="card-image2">
+          <!-- <p class="card-content2">
+            Helo how you are
+          </p> -->
         </li>
         <li class=card-image3></li>
       </ul>
-      <div class="card-content2">
-        Helo how you are
-      </div>
+
     </div>
 
     <div class="wrapper">
+      <div class="title">
+        <h1>FEATURES AND NEWS</h1>
+      </div>
     </div>
+
+
 
   </div>
 
