added logo to navbar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
   <div class="logo">
+    <!-- <h1>WWF</h1> -->
   </div>
 
   <div class="navbar">
@@ -68,14 +69,14 @@
       </div>
     </div>
 
-    <div>
-
+<!-- WORK ON THIS SECTION: -->
+    <div class="wrapper">
       <a class="homepage-card__anchor--positioned" href="https://www.worldwildlife.org/pages/world-water-day-water-heros">
         <div class="homepage-card__content--bottom homepage-card__content">
           <span class="label"></span>
           <h3 class="hdr">
-World Water Day: Meet some freshwater heroes
-</h3>
+            World Water Day: Meet some freshwater heroes
+          </h3>
           <p></p>
         </div>
       </a>
