added sections, in progress

--- a/index.html
+++ b/index.html
@@ -53,14 +53,21 @@
     <div class="wrapper">
       <ul class="cards">
         <li class="card-image1"></li>
+
+        <!--SECTION IN PROGRESS: -->
         <li class="card-image2">
-          <!-- <p class="card-content2">
-            Helo how you are
-          </p> -->
+          <div class="homepage-card__content">
+            <span class="label">Take Action</span>
+            <h3 class="hdr">
+            Speak up to support international conservation funding.
+            </h3>
+            <span class="button--orange button">Call Congress today</span>
+          </div>
         </li>
+
+
         <li class=card-image3></li>
       </ul>
-
     </div>
 
     <div class="wrapper">
@@ -69,7 +76,7 @@
       </div>
     </div>
 
-<!-- WORK ON THIS SECTION: -->
+<!--SECTION IN PROGRESS: -->
     <div class="wrapper">
       <a class="homepage-card__anchor--positioned" href="https://www.worldwildlife.org/pages/world-water-day-water-heros">
         <div class="homepage-card__content--bottom homepage-card__content">
@@ -77,7 +84,6 @@
           <h3 class="hdr">
             World Water Day: Meet some freshwater heroes
           </h3>
-          <p></p>
         </div>
       </a>
     </div>
