added flex to cards

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         <li class="card-image1"></li>
 
         <!--SECTION IN PROGRESS: -->
-        <li class="card-image2">
-          <div class="homepage-card__content">
+        <li class="card-image2" >
+          <div class="homepage-card__content" >
             <span class="label">Take Action</span>
-            <h3 class="hdr">
+            <h3 class="hdr" style="color:red;">
             Speak up to support international conservation funding.
             </h3>
             <span class="button--orange button">Call Congress today</span>
