added open sans font family

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>WWF Clone</title>
 
   <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 </head>
 
 <body>
@@ -26,7 +27,7 @@
     </ul>
 
 
-    <div class=nbList2>
+    <div class=nbList2 >
       <li>ABOUT US</li>
       <li>HOW TO HELP</li>
 
@@ -42,9 +43,9 @@
 
   <header class="headerImg">
     <div>
-      <h1>GOING BEYOND EARTH HOUR</h1>
+      <h1>YOUR VOICE MATTERS</h1>
       <br>
-      <p>9 simple ways to fight climate change</p>
+      <p>WWF activists on why they speak up for the planet</p>
     </div>
   </header>
 
@@ -57,11 +58,11 @@
         <!--SECTION IN PROGRESS: -->
         <li class="card-image2" >
           <div class="homepage-card__content" >
-            <span class="label">Take Action</span>
-            <h3 class="hdr" style="color:red;">
+            <span class="label" style="color:white;">Take Action</span>
+            <h3 class="hdr" style="color:white;">
             Speak up to support international conservation funding.
             </h3>
-            <span class="button--orange button">Call Congress today</span>
+            <span class="button--orange button" style="color:white;">Call Congress today</span>
           </div>
         </li>
 
