Evened up & tweaked elements

--- a/index.html
+++ b/index.html
@@ -41,19 +41,42 @@
     </div>
   </div>
 
-  <header class="headerImg">
+
+  <header class="headerImg"></header>
+
+
+
+  <!-- <li>
     <div>
-      <h1>YOUR VOICE MATTERS</h1>
-      <br>
-      <p>WWF activists on why they speak up for the planet</p>
+      <div class="card">
+      </div>
     </div>
-  </header>
+  </li> -->
+
+
 
   <div class="homepage">
 
     <div class="wrapper">
       <ul class="cards">
-        <li class="card-image1"></li>
+        <li class="card-image1">
+          <a href="https://www.worldwildlife.org/stories/president-trump-rolls-back-progress-made-on-crucial-climate-change-policy--12">
+
+
+              <div class=" homepage-card__content">
+                <span class="label">
+                </span>
+
+                <h3 class="hdr">
+                President Trump rolls back progress made on crucial climate change policy
+                </h3>
+
+                <p>
+                </p>
+
+              </div>
+          </a>
+        </li>
 
         <!--SECTION IN PROGRESS: -->
         <li class="card-image2" >
