sized cards correctly

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
 
   <div class="logo">
-    <!-- <h1>WWF</h1> -->
   </div>
 
   <div class="navbar">
@@ -44,14 +43,7 @@
 
   <header class="headerImg"></header>
 
-
-
-  <!-- <li>
-    <div>
-      <div class="card">
-      </div>
-    </div>
-  </li> -->
+<div class="homepage-card__bg-image" style="background-image: url('https://c402277.ssl.cf1.rackcdn.com/photos/12917/images/portrait_small/MID_54156.jpg?1482158655')"></div>
 
 
 
@@ -61,7 +53,6 @@
       <ul class="cards">
         <li class="card-image1">
           <a href="https://www.worldwildlife.org/stories/president-trump-rolls-back-progress-made-on-crucial-climate-change-policy--12">
-
 
               <div class=" homepage-card__content">
                 <span class="label">
@@ -80,17 +71,23 @@
 
         <!--SECTION IN PROGRESS: -->
         <li class="card-image2" >
-          <div class="homepage-card__content" >
-            <span class="label" style="color:white;">Take Action</span>
-            <h3 class="hdr" style="color:white;">
+          <div class="card-content2" >
+            <span>Take Action</span>
+            <h3 class="hdr" >
             Speak up to support international conservation funding.
             </h3>
-            <span class="button--orange button" style="color:white;">Call Congress today</span>
+            <span class="button--orange button">Call Congress today</span>
           </div>
         </li>
 
-
-        <li class=card-image3></li>
+        <li class=card-image3>
+          <div class="card-content3">
+            <h1>WWF on TV</h1>
+            <h3 class="hdr" >
+            Support WWF with a monthly gift to help protect tigers and other species
+            </h3>
+          </div>
+        </li>
       </ul>
     </div>
 
