added row 2 cards

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
           </a>
         </li>
 
+
+
         <!--SECTION IN PROGRESS: -->
         <li class="card-image2" >
           <div class="card-content2" >
@@ -91,23 +93,31 @@
       </ul>
     </div>
 
-    <div class="wrapper">
+    <div >
       <div class="title">
         <h1>FEATURES AND NEWS</h1>
       </div>
     </div>
 
 <!--SECTION IN PROGRESS: -->
-    <div class="wrapper">
-      <a class="homepage-card__anchor--positioned" href="https://www.worldwildlife.org/pages/world-water-day-water-heros">
-        <div class="homepage-card__content--bottom homepage-card__content">
+    <!-- <div class="wrapper">
+      <a class="homepage-card__anchor-positioned" href="https://www.worldwildlife.org/pages/world-water-day-water-heros">
+        <div class="homepage-card__content-bottom homepage-card__content">
           <span class="label"></span>
           <h3 class="hdr">
             World Water Day: Meet some freshwater heroes
           </h3>
         </div>
       </a>
-    </div>
+    </div> -->
+<div class="wrapper">
+  <ul class="cards">
+    <li class="card-image1a"></li>
+    <li class="card-image2a"></li>
+    <li></li>
+  </ul>
+</div>
+
 
 
 
