added turtle image in row 2

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <ul class="cards">
     <li class="card-image1a"></li>
     <li class="card-image2a"></li>
-    <li></li>
+    <li class="card-image3a"></li>
   </ul>
 </div>
 
