--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h3 class="hdr" >
             Speak up to support international conservation funding.
             </h3>
-            <span class="button--orange button">Call Congress today</span>
+            <span><button class="congressButton">Call Congress today > </button></span>
           </div>
         </li>
 
