--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 
   <header class="headerImg"></header>
 
-<div class="homepage-card__bg-image" style="background-image: url('https://c402277.ssl.cf1.rackcdn.com/photos/12917/images/portrait_small/MID_54156.jpg?1482158655')"></div>
-
-
+<!-- <div class="homepage-card__bg-image" style="background-image: url('https://c402277.ssl.cf1.rackcdn.com/photos/12917/images/portrait_small/MID_54156.jpg?1482158655')"></div> -->
 
   <div class="homepage">
 
@@ -54,7 +52,7 @@
         <li class="card-image1">
           <a href="https://www.worldwildlife.org/stories/president-trump-rolls-back-progress-made-on-crucial-climate-change-policy--12">
 
-              <div class=" homepage-card__content">
+              <div >
                 <span class="label">
                 </span>
 
@@ -74,7 +72,7 @@
         <!--SECTION IN PROGRESS: -->
         <li class="card-image2" >
           <div class="card-content2" >
-            <span>Take Action</span>
+            <span>TAKE ACTION</span>
             <h3 class="hdr" >
             Speak up to support international conservation funding.
             </h3>
