--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <li class="card-image1">
           <a href="https://www.worldwildlife.org/stories/president-trump-rolls-back-progress-made-on-crucial-climate-change-policy--12">
 
-              <div >
+              <div class="card-content1">
                 <span class="label">
                 </span>
 
