--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </ul>
     </div>
 
-    <div >
+    <div>
       <div class="title">
         <h1>FEATURES AND NEWS</h1>
       </div>
@@ -116,9 +116,18 @@
   </ul>
   <ul class="cards">
     <li class="card-image4a"></li>
-
+    <li class="card-image5a"></li>
+    <li class="card-image6a"></li>
   </ul>
 </div>
+
+
+  <div id="missionRow">
+    <div class="title">
+      <h1>WWF'S MISSION</h1>
+    </div>
+  </div>
+
 
 
 
