started next two rows

--- a/index.html
+++ b/index.html
@@ -129,6 +129,18 @@
   </div>
 
 
+  <div >
+    <div class="title">
+      <h1>IN CASE YOU MISSED IT</h1>
+    </div>
+  </div>
+
+  <div class='wrapper'>
+    <ul class="cards">
+      <li class="card-image1b"></li>
+      <li class="card-image2b"></li>
+    </ul>
+  </div>
 
 
 
