added first food image

--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
     <div class="title">
       <h1>WWF'S MISSION</h1>
     </div>
+    <div>
+      <p class="hilight">Our mission is to conserve nature and reduce the most pressing threats to the diversity of life on Earth.</p>
+      <p class="lowlight">We organize our work around these six areas:</p>
+    </div>
+    <div>
+      <a href="/initiatives/food">
+        <img alt="" src="https://www.worldwildlife.org/assets/content/goal-pillar-food-b1a57617056325546767a1a96ba6d3dcf2db6d7744f8fc54fe2a8a18c5dcdc73.jpg">
+        <h4>Food</h4>
+      </a>
+    </div>
   </div>
 
 
