adding next section

--- a/index.html
+++ b/index.html
@@ -151,6 +151,16 @@
     </ul>
   </div>
 
+  <div class="title">
+    <h1>WORLD WILDLIFE MAGAZINE</h1>
+  </div>
+
+  <div class="wrapper">
+    <ul class="cards">
+      <li class="WWFmag"></li>
+    </ul>
+  </div>
+
 
 
   </div>
