Aligning section components

--- a/index.html
+++ b/index.html
@@ -157,9 +157,35 @@
 
   <div class="wrapper">
     <ul class="cards">
-      <li class="WWFmag"></li>
+      <li class="wwfmag"></li>
     </ul>
   </div>
+
+  <div class="accntRow">
+    <div class="title">
+      <h1>ACCOUNTABILITY</h1>
+    </div>
+    <div>
+      <p class="hilight">85% of WWF's spending is directed to worldwide conservation activities.</p>
+    </div>
+    <div class="accnt">
+      <img alt="" src="https://c402277.ssl.cf1.rackcdn.com/photos/12834/images/magazine_small/chart-2016-transparent-smaller.png?1480361077">
+    </div>
+    <a href="https://www.worldwildlife.org/about/financials" class="homepage-card__anchor">
+    <span class="subtext">
+
+    </span>
+    <span>
+      <button class='accntbtn'>LEARN MORE</button>
+    </span>
+    </a>
+  </div>
+
+
+
+
+
+
 
 
 
