--- a/index.html
+++ b/index.html
@@ -185,6 +185,13 @@
     <h1>HOW YOU CAN HELP</h1>
   </div>
 
+  <div class="wrapper">
+    <ul class="cards">
+      <li class="card-image1c"></li>
+      <li class="card-image2c"></li>
+    </ul>
+  </div>
+
 
 
 
