started footer section

--- a/index.html
+++ b/index.html
@@ -197,13 +197,20 @@
 
 
 
+<footer>
 
-
+  <div class="footerbar">
+    <p>Get the latest conservation news with WWF email.
+    </p>
   </div>
 
+  <div>
+    <input type="text" placeholder="Email Address">
+  </div>
 
+</footer>
 
-
+  </div>
 
 
 
