added more to footer

--- a/index.html
+++ b/index.html
@@ -200,13 +200,16 @@
 <footer>
 
   <div class="footerbar">
-    <p>Get the latest conservation news with WWF email.
-    </p>
+    <ul class="cards">
+      <li>Get the latest conservation news with WWF email.</li>
+      <li><input type="text" placeholder="Email Address"></li>
+      <li><button class="emailbtn">SIGN UP</button></li>
+      <li><p>Already have a WWF account?</p></li>
+      <li><button class="emailbtn">LOG IN</button></li>
+    </ul>
   </div>
 
-  <div>
-    <input type="text" placeholder="Email Address">
-  </div>
+
 
 </footer>
 
