--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
 
 
-    <div class=nbList2 >
+    <div class=nbList2>
       <li>ABOUT US</li>
       <li>HOW TO HELP</li>
 
@@ -43,7 +43,7 @@
 
   <header class="headerImg"></header>
 
-<!-- <div class="homepage-card__bg-image" style="background-image: url('https://c402277.ssl.cf1.rackcdn.com/photos/12917/images/portrait_small/MID_54156.jpg?1482158655')"></div> -->
+  <!-- <div class="homepage-card__bg-image" style="background-image: url('https://c402277.ssl.cf1.rackcdn.com/photos/12917/images/portrait_small/MID_54156.jpg?1482158655')"></div> -->
 
   <div class="homepage">
 
@@ -52,28 +52,22 @@
         <li class="card-image1">
           <a href="https://www.worldwildlife.org/stories/president-trump-rolls-back-progress-made-on-crucial-climate-change-policy--12">
 
-              <div class="card-content1">
-                <span class="label">
-                </span>
-
-                <h3 class="hdr">
+            <div class="card-content1">
+              <span class="label"></span>
+              <h3 class="hdr">
                 President Trump rolls back progress made on crucial climate change policy
-                </h3>
-
-                <p>
-                </p>
-
-              </div>
+              </h3>
+            </div>
           </a>
         </li>
 
 
 
         <!--SECTION IN PROGRESS: -->
-        <li class="card-image2" >
-          <div class="card-content2" >
+        <li class="card-image2">
+          <div class="card-content2">
             <span>TAKE ACTION</span>
-            <h3 class="hdr" >
+            <h3 class="hdr">
             Speak up to support international conservation funding.
             </h3>
             <span><button class="congressButton">Call Congress today > </button></span>
@@ -83,7 +77,7 @@
         <li class=card-image3>
           <div class="card-content3">
             <h1>WWF on TV</h1>
-            <h3 class="card3hdr" >
+            <h3 class="card3hdr">
             Support WWF with a monthly gift to help protect tigers and other species
             </h3>
           </div>
@@ -97,7 +91,7 @@
       </div>
     </div>
 
-<!--SECTION IN PROGRESS: -->
+    <!--SECTION IN PROGRESS: -->
     <!-- <div class="wrapper">
       <a class="homepage-card__anchor-positioned" href="https://www.worldwildlife.org/pages/world-water-day-water-heros">
         <div class="homepage-card__content-bottom homepage-card__content">
@@ -108,110 +102,106 @@
         </div>
       </a>
     </div> -->
-<div class="wrapper">
-  <ul class="cards">
-    <li class="card-image1a"></li>
-    <li class="card-image2a"></li>
-    <li class="card-image3a"></li>
-  </ul>
-  <ul class="cards">
-    <li class="card-image4a"></li>
-    <li class="card-image5a"></li>
-    <li class="card-image6a"></li>
-  </ul>
-</div>
-
-
-  <div class="missionRow">
-    <div class="title">
-      <h1>WWF'S MISSION</h1>
+    <div class="wrapper">
+      <ul class="cards">
+        <li class="card-image1a"></li>
+        <li class="card-image2a"></li>
+        <li class="card-image3a"></li>
+      </ul>
+      <ul class="cards">
+        <li class="card-image4a"></li>
+        <li class="card-image5a"></li>
+        <li class="card-image6a"></li>
+      </ul>
     </div>
+
+
+    <div class="missionRow">
+      <div class="title">
+        <h1>WWF'S MISSION</h1>
+      </div>
+      <div>
+        <p class="hilight">Our mission is to conserve nature and reduce the most pressing threats to the diversity of life on Earth.</p>
+        <p class="lowlight">We organize our work around these six areas:</p>
+      </div>
+      <div class="mission1">
+        <a href="/initiatives/food">
+          <h4>Food</h4>
+        </a>
+      </div>
+    </div>
+
+
     <div>
-      <p class="hilight">Our mission is to conserve nature and reduce the most pressing threats to the diversity of life on Earth.</p>
-      <p class="lowlight">We organize our work around these six areas:</p>
+      <div class="title">
+        <h1>IN CASE YOU MISSED IT</h1>
+      </div>
     </div>
-    <div class="mission1">
-      <a href="/initiatives/food">
-        <h4>Food</h4>
+
+    <div class='wrapper'>
+      <ul class="cards">
+        <li class="card-image1b"></li>
+        <li class="card-image2b"></li>
+      </ul>
+    </div>
+
+    <div class="title">
+      <h1>WORLD WILDLIFE MAGAZINE</h1>
+    </div>
+
+    <div class="wrapper">
+      <ul class="cards">
+        <li class="wwfmag"></li>
+      </ul>
+    </div>
+
+    <div class="accntRow">
+      <div class="title">
+        <h1>ACCOUNTABILITY</h1>
+      </div>
+      <div>
+        <p class="hilight">85% of WWF's spending is directed to worldwide conservation activities.</p>
+      </div>
+      <div class="accnt">
+        <img alt="" src="https://c402277.ssl.cf1.rackcdn.com/photos/12834/images/magazine_small/chart-2016-transparent-smaller.png?1480361077">
+      </div>
+      <a href="https://www.worldwildlife.org/about/financials" class="homepage-card__anchor">
+        <span class="subtext">
+
+      </span>
+        <span>
+        <button class='accntbtn'>LEARN MORE</button>
+      </span>
       </a>
     </div>
-  </div>
 
-
-  <div >
     <div class="title">
-      <h1>IN CASE YOU MISSED IT</h1>
+      <h1>HOW YOU CAN HELP</h1>
     </div>
-  </div>
 
-  <div class='wrapper'>
-    <ul class="cards">
-      <li class="card-image1b"></li>
-      <li class="card-image2b"></li>
-    </ul>
-  </div>
-
-  <div class="title">
-    <h1>WORLD WILDLIFE MAGAZINE</h1>
-  </div>
-
-  <div class="wrapper">
-    <ul class="cards">
-      <li class="wwfmag"></li>
-    </ul>
-  </div>
-
-  <div class="accntRow">
-    <div class="title">
-      <h1>ACCOUNTABILITY</h1>
+    <div class="wrapper">
+      <ul class="cards">
+        <li class="card-image1c"></li>
+        <li class="card-image2c"></li>
+      </ul>
     </div>
-    <div>
-      <p class="hilight">85% of WWF's spending is directed to worldwide conservation activities.</p>
-    </div>
-    <div class="accnt">
-      <img alt="" src="https://c402277.ssl.cf1.rackcdn.com/photos/12834/images/magazine_small/chart-2016-transparent-smaller.png?1480361077">
-    </div>
-    <a href="https://www.worldwildlife.org/about/financials" class="homepage-card__anchor">
-    <span class="subtext">
-
-    </span>
-    <span>
-      <button class='accntbtn'>LEARN MORE</button>
-    </span>
-    </a>
-  </div>
-
-  <div class="title">
-    <h1>HOW YOU CAN HELP</h1>
-  </div>
-
-  <div class="wrapper">
-    <ul class="cards">
-      <li class="card-image1c"></li>
-      <li class="card-image2c"></li>
-    </ul>
-  </div>
 
 
 
 
-
-
-<footer>
-
-  <div class="footerbar">
-    <ul class="cards">
-      <li>Get the latest conservation news with WWF email.</li>
-      <li><input type="text" placeholder="Email Address"></li>
-      <li><button class="emailbtn">SIGN UP</button></li>
-      <li><p>Already have a WWF account?</p></li>
-      <li><button class="emailbtn">LOG IN</button></li>
-    </ul>
-  </div>
-
-
-
-</footer>
+    <footer>
+      <div class="footerbar">
+        <ul class="cards">
+          <li>Get the latest conservation news with WWF email.</li>
+          <li><input type="text" placeholder="Email Address"></li>
+          <li><button class="emailbtn">SIGN UP</button></li>
+          <li>
+            <p>Already have a WWF account?</p>
+          </li>
+          <li><button class="emailbtn">LOG IN</button></li>
+        </ul>
+      </div>
+    </footer>
 
   </div>
 
