--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     </div>
 
 
+<!-- MISSION SECTION -->
     <div class="missionRow">
       <div class="title">
         <h1>WWF'S MISSION</h1>
@@ -155,6 +156,8 @@
       </ul>
     </div>
 
+
+<!-- ACCOUNTABILITY WITH GRAPH SECTION -->
     <div class="accntRow">
       <div class="title">
         <h1>ACCOUNTABILITY</h1>
@@ -188,7 +191,7 @@
 
 
 
-
+<!-- FOOTER SECTION -->
     <footer>
       <div class="footerbar">
         <ul class="cards">
