fixed weight to width

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <p class="hilight">Our mission is to conserve nature and reduce the most pressing threats to the diversity of life on Earth.</p>
         <p class="lowlight">We organize our work around these six areas:</p>
       </div>
-      <div class="mission1">
+      <div id="mission1">
         <a href="/initiatives/food">
           <h4>Food</h4>
         </a>
