Set up for mission pics

--- a/index.html
+++ b/index.html
@@ -121,13 +121,41 @@
       <div class="title">
         <h1>WWF'S MISSION</h1>
       </div>
+
       <div>
         <p class="hilight">Our mission is to conserve nature and reduce the most pressing threats to the diversity of life on Earth.</p>
         <p class="lowlight">We organize our work around these six areas:</p>
       </div>
-      <div id="mission1">
+
+      <div>
+        <img id="missionpic" src="https://www.worldwildlife.org/assets/content/goal-pillar-food-b1a57617056325546767a1a96ba6d3dcf2db6d7744f8fc54fe2a8a18c5dcdc73.jpg">
         <a href="/initiatives/food">
           <h4>Food</h4>
+        </a>
+
+        <img id="missionpic" src="">
+        <a href="/initiatives/food">
+          <h4>CLIMATE</h4>
+        </a>
+
+        <img id="missionpic" src="">
+        <a href="/initiatives/food">
+          <h4>FRESH WATER</h4>
+        </a>
+
+        <img id="missionpic" src="">
+        <a href="/initiatives/food">
+          <h4>WILDLIFE</h4>
+        </a>
+
+        <img id="missionpic" src="">
+        <a href="/initiatives/food">
+          <h4>FORESTS</h4>
+        </a>
+
+        <img id="missionpic" src="">
+        <a href="/initiatives/food">
+          <h4>OCEANS</h4>
         </a>
       </div>
     </div>
