added img links for mission pics

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
 
 
-<!-- MISSION SECTION -->
+    <!-- MISSION SECTION -->
     <div class="missionRow">
       <div class="title">
         <h1>WWF'S MISSION</h1>
@@ -128,113 +128,127 @@
       </div>
 
       <div>
-        <img id="missionpic" src="https://www.worldwildlife.org/assets/content/goal-pillar-food-b1a57617056325546767a1a96ba6d3dcf2db6d7744f8fc54fe2a8a18c5dcdc73.jpg">
-        <a href="/initiatives/food">
-          <h4>Food</h4>
-        </a>
-
-        <img id="missionpic" src="">
-        <a href="/initiatives/food">
-          <h4>CLIMATE</h4>
-        </a>
-
-        <img id="missionpic" src="">
-        <a href="/initiatives/food">
-          <h4>FRESH WATER</h4>
-        </a>
-
-        <img id="missionpic" src="">
-        <a href="/initiatives/food">
-          <h4>WILDLIFE</h4>
-        </a>
-
-        <img id="missionpic" src="">
-        <a href="/initiatives/food">
-          <h4>FORESTS</h4>
-        </a>
-
-        <img id="missionpic" src="">
-        <a href="/initiatives/food">
-          <h4>OCEANS</h4>
-        </a>
-      </div>
-    </div>
-
-
-    <div>
-      <div class="title">
-        <h1>IN CASE YOU MISSED IT</h1>
-      </div>
-    </div>
-
-    <div class='wrapper'>
-      <ul class="cards">
-        <li class="card-image1b"></li>
-        <li class="card-image2b"></li>
-      </ul>
-    </div>
-
-    <div class="title">
-      <h1>WORLD WILDLIFE MAGAZINE</h1>
-    </div>
-
-    <div class="wrapper">
-      <ul class="cards">
-        <li class="wwfmag"></li>
-      </ul>
-    </div>
-
-
-<!-- ACCOUNTABILITY WITH GRAPH SECTION -->
-    <div class="accntRow">
-      <div class="title">
-        <h1>ACCOUNTABILITY</h1>
-      </div>
-      <div>
-        <p class="hilight">85% of WWF's spending is directed to worldwide conservation activities.</p>
-      </div>
-      <div class="accnt">
-        <img alt="" src="https://c402277.ssl.cf1.rackcdn.com/photos/12834/images/magazine_small/chart-2016-transparent-smaller.png?1480361077">
-      </div>
-      <a href="https://www.worldwildlife.org/about/financials" class="homepage-card__anchor">
-        <span class="subtext">
-
-      </span>
-        <span>
-        <button class='accntbtn'>LEARN MORE</button>
-      </span>
-      </a>
-    </div>
-
-    <div class="title">
-      <h1>HOW YOU CAN HELP</h1>
-    </div>
-
-    <div class="wrapper">
-      <ul class="cards">
-        <li class="card-image1c"></li>
-        <li class="card-image2c"></li>
-      </ul>
-    </div>
-
-
-
-<!-- FOOTER SECTION -->
-    <footer>
-      <div class="footerbar">
-        <ul class="cards">
-          <li>Get the latest conservation news with WWF email.</li>
-          <li><input type="text" placeholder="Email Address"></li>
-          <li><button class="emailbtn">SIGN UP</button></li>
-          <li>
-            <p>Already have a WWF account?</p>
+        <ul>
+          <li class="missionpics">
+            <img id="missionpic" src="https://www.worldwildlife.org/assets/content/goal-pillar-food-b1a57617056325546767a1a96ba6d3dcf2db6d7744f8fc54fe2a8a18c5dcdc73.jpg">
+            <a href="/initiatives/food">
+              <h4>FOOD</h4>
+            </a>
           </li>
-          <li><button class="emailbtn">LOG IN</button></li>
+
+          <li class="missionpics">
+            <a href="/initiatives/climate">
+              <img id="missionpic" src="https://www.worldwildlife.org/assets/content/goal-pillar-climate-43b64fd9164371a211879f00fed3be15f5273209760b7ab286d72a88fbd48897.jpg">
+              <h4>Climate</h4>
+            </a>
+          </li>
+
+          <li class="missionpics">
+
+            <a href="/initiatives/fresh-water">
+              <img id="missionpic" src="https://www.worldwildlife.org/assets/content/goal-pillar-fresh-water-1f24b1a65c6fb6999cff93d13ebe04d34befba5c647f51b09d27f20045d5764e.jpg">
+              <h4>Fresh Water</h4>
+            </a>
+          </li>
+
+          <li class="missionpics">
+            <a href="/initiatives/wildlife-conservation">
+              <img id="missionpic" src="https://www.worldwildlife.org/assets/content/goal-pillar-wildlife-d01129a1821cd69727fefe773724a92e6b57b5c1fc627fcef5f37442cd2b98d5.jpg">
+              <h4>Wildlife</h4>
+            </a>
+          </li>
+
+          <li class="missionpics">
+            <a href="/initiatives/forests">
+              <img id="missionpic" src="https://www.worldwildlife.org/assets/content/goal-pillar-forests-2ab06cda2d56d9acc6c4b0494621c27375078d1d45859e5c3ff8b3814233767d.jpg">
+              <h4>Forests</h4>
+            </a>
+          </li>
+
+          <li class="missionpics">
+            <a href="/initiatives/oceans">
+              <img id="missionpic" src="https://www.worldwildlife.org/assets/content/goal-pillar-oceans-2a987cc5a9959a72dea58b0ac9dcb2c3987a90414c0cfd42d0b2bde97aa10d9f.jpg">
+              <h4>Oceans</h4>
+            </a>
+          </li>
         </ul>
       </div>
-    </footer>
 
-  </div>
+
+      <div>
+        <div class="title">
+          <h1>IN CASE YOU MISSED IT</h1>
+        </div>
+      </div>
+
+      <div class='wrapper'>
+        <ul class="cards">
+          <li class="card-image1b"></li>
+          <li class="card-image2b"></li>
+        </ul>
+      </div>
+
+      <div class="title">
+        <h1>WORLD WILDLIFE MAGAZINE</h1>
+      </div>
+
+      <div class="wrapper">
+        <ul class="cards">
+          <li class="wwfmag"></li>
+        </ul>
+      </div>
+
+
+      <!-- ACCOUNTABILITY WITH GRAPH SECTION -->
+      <div class="accntRow">
+        <div class="title">
+          <h1>ACCOUNTABILITY</h1>
+        </div>
+        <div>
+          <p class="hilight">85% of WWF's spending is directed to worldwide conservation activities.</p>
+        </div>
+        <div class="accnt">
+          <img alt="" src="https://c402277.ssl.cf1.rackcdn.com/photos/12834/images/magazine_small/chart-2016-transparent-smaller.png?1480361077">
+        </div>
+        <a href="https://www.worldwildlife.org/about/financials" class="homepage-card__anchor">
+          <span class="subtext">
+
+      </span>
+          <span>
+        <button class='accntbtn'>LEARN MORE</button>
+      </span>
+        </a>
+      </div>
+
+      <div class="title">
+        <h1>HOW YOU CAN HELP</h1>
+      </div>
+
+      <div class="wrapper">
+        <ul class="cards">
+          <li class="card-image1c"></li>
+          <li class="card-image2c"></li>
+        </ul>
+      </div>
+
+
+
+      <!-- FOOTER SECTION -->
+      <footer>
+        <div class="footerbar">
+          <ul class="cards">
+            <li>Get the latest conservation news with WWF email.</li>
+            <li><input type="text" placeholder="Email Address"></li>
+            <li><button class="emailbtn">SIGN UP</button></li>
+            <li>
+              <p>Already have a WWF account?</p>
+            </li>
+            <li><button class="emailbtn">LOG IN</button></li>
+          </ul>
+        </div>
+      </footer>
+
+    </div>
 
 
 
