adjusted mission img size

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       </div>
 
 
-      <!-- ACCOUNTABILITY WITH GRAPH SECTION -->
+      <!-- ACCOUNTABILITY (WITH GRAPH) SECTION -->
       <div class="accntRow">
         <div class="title">
           <h1>ACCOUNTABILITY</h1>
