--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
       </ul>
       <ul class="cards">
         <li class="card-image4a"></li>
-        <li class="card-image5a"></li>
+        <li class="card-image5a">
+          <div class="homepage-card__content">
+            <span class="label">WWF In the News</span>
+            <h3 class="hdr">The Arctic, Antarctic Poles Just Set a Terrifying New Record for Low Levels of Sea Ice</h3>
+            </div>
+            <img src="https://c402277.ssl.cf1.rackcdn.com/photos/12168/images/original/logo-usatoday.png?1471878916">
+        </li>
         <li class="card-image6a"></li>
       </ul>
     </div>
@@ -173,7 +179,7 @@
           </li>
         </ul>
       </div>
-
+    </div>
 
       <div>
         <div class="title">
