added twitter card information

--- a/index.html
+++ b/index.html
@@ -105,7 +105,30 @@
     <div class="wrapper">
       <ul class="cards">
         <li class="card-image1a"></li>
-        <li class="card-image2a"></li>
+        <li class="card-image2a">
+<!-- IN PROGRESS SECTION -->
+          <div class="homepage-card__content--positioned homepage-card__content">
+          <a target="new" data-track-event="Homepages Show|Quarter Twitter Card - Twitter|Sign the petition and ask @POTUS to prioritize our planet's future: http://wwf.to/2nvVBWY" href="https://twitter.com">
+          <img class="homepage-card--twitter__twitter_logo" alt="twitter logo" src="https://www.worldwildlife.org/assets/content/cards-twitter-logo-eefde87af594b545ad839492e33d98bccf3cb4b7379b9c36e6a7c618770ba6ca.png">
+          </a> <a target="new" data-track-event="Homepages Show|Quarter Twitter Card - Handle and Logo|Sign the petition and ask @POTUS to prioritize our planet's future: http://wwf.to/2nvVBWY" href="https://twitter.com/world_wildlife">
+          <div class="homepage-card--twitter__handle_and_logo">
+          <img alt="wwf logo" src="https://www.worldwildlife.org/assets/structure/unique/logo-footer-0d1f0e33577a0ac8d3eed2f9dcf2f97b376aa288e4e73f6997c3c5d22e3e4ebc.png">
+          <p class="homepage-card--twitter__name">World Wildlife Fund</p>
+          <p class="homepage-card--twitter__handle">@world_wildlife</p>
+          </div>
+          </a>
+          <p>Sign the petition and ask @<a class="tweet-url username" data-track-event="Homepages Show|Quarter Twitter Card - Tweet Screen name|Sign the petition and ask @POTUS to prioritize our planet's future: http://wwf.to/2nvVBWY" href="https://twitter.com/POTUS" rel="nofollow" target="new">POTUS</a> to prioritize our planet's future: <a data-track-event="Homepages Show|Quarter Twitter Card - Tweet Link|Sign the petition and ask @POTUS to prioritize our planet's future: http://wwf.to/2nvVBWY" href="http://wwf.to/2nvVBWY" rel="nofollow" target="new">http://wwf.to/2nvVBWY</a></p>
+          <a target="new" data-track-event="Homepages Show|Quarter Twitter Card - Tweet Date|Sign the petition and ask @POTUS to prioritize our planet's future: http://wwf.to/2nvVBWY" href="https://twitter.com/world_wildlife/status/846880482818211840">
+          <span class="label">7 days ago</span>
+          </a> <div class="homepage-card--twitter__actions">
+          <a href="https://twitter.com/intent/tweet?in_reply_to=846880482818211840" class="tweet_reply" data-track-event="Homepages Show|Quarter Twitter Card - Tweet Reply|Sign the petition and ask @POTUS to prioritize our planet's future: http://wwf.to/2nvVBWY" target="new">Reply</a>
+          <a href="https://twitter.com/intent/retweet?tweet_id=846880482818211840" class="tweet_retweet" data-track-event="Homepages Show|Quarter Twitter Card - Tweet Retweet|Sign the petition and ask @POTUS to prioritize our planet's future: http://wwf.to/2nvVBWY" target="new">Retweet</a>
+          <a href="https://twitter.com/intent/favorite?tweet_id=846880482818211840" class="tweet_favorite" data-track-event="Homepages Show|Quarter Twitter Card - Tweet Favorite|Sign the petition and ask @POTUS to prioritize our planet's future: http://wwf.to/2nvVBWY" target="new">Favorite</a>
+          </div>
+          </div>
+<!-- END OF SECTION IN PROGRESS -->
+
+        </li>
         <li class="card-image3a"></li>
       </ul>
       <ul class="cards">
