testing out linear gradient & hdr text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
   </div>
 
 
-  <header class="headerImg"></header>
+  <header class="headerImg">
+    <div class="hdr-text">
+      <!-- <span class="label"></span> -->
+      <h2 class="hdr">Your Voice Matters</h2>
+      <h3 class="hdr-sub">WWF activists on why they speak up for the planet</h3>
+    </div>
+  </header>
 
   <!-- <div class="homepage-card__bg-image" style="background-image: url('https://c402277.ssl.cf1.rackcdn.com/photos/12917/images/portrait_small/MID_54156.jpg?1482158655')"></div> -->
 
